Fixes for various routers, fixes for RouterBase, add unit-tests for single-sided bundles

--- a/abis/LPWethIonx.json
+++ b/abis/LPWethIonx.json
@@ -642,19 +642,6 @@
   },
   {
     "inputs": [],
-    "name": "getPoolId",
-    "outputs": [
-      {
-        "internalType": "bytes32",
-        "name": "poolId",
-        "type": "bytes32"
-      }
-    ],
-    "stateMutability": "view",
-    "type": "function"
-  },
-  {
-    "inputs": [],
     "name": "getToken0",
     "outputs": [
       {
@@ -1127,5 +1114,9 @@
     "outputs": [],
     "stateMutability": "nonpayable",
     "type": "function"
+  },
+  {
+    "stateMutability": "payable",
+    "type": "receive"
   }
 ]
