--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,6 @@
     "skipLibCheck": true,
     "resolveJsonModule": true,
   },
-  "include": ["./scripts", "./test", "./typechain-types"],
+  "include": ["./test", "./typechain-types"],
   "files": ["./hardhat.config.ts"]
  }
-  
