--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test": "yarn hardhat test --deploy-fixture --network hardhat ./tests/Web3PacksV2.test.ts",
     "watch-test": "hardhat watch test",
     "hint": "solhint \"contracts/**/*.sol\"",
-    "coverage": "yarn clean-test && hardhat --show-stack-traces coverage --temp coverage_build && yarn clean-test",
+    "coverage": "hardhat --show-stack-traces coverage --temp coverage_build",
     "gas": "REPORT_GAS=true hardhat test",
     "start": "hardhat node --port 8545",
     "deploy": "hardhat deploy --tags web3packs,deploySS,deployLP --network",
@@ -63,9 +63,10 @@
     "hardhat-gas-reporter": "^1.0.4",
     "hardhat-watcher": "^2.1.1",
     "lodash": "^4.17.21",
+    "mocha-junit-reporter": "^2.2.1",
     "solc": "0.8.17",
     "solhint": "^3.0.0",
-    "solidity-coverage": "^0.7.4",
+    "solidity-coverage": "^0.8.14",
     "solidity-docgen": "^0.5.3",
     "ts-node": "^10.9.1",
     "typechain": "^8.3.2",
