--- a/abis/SSWethIonx.json
+++ b/abis/SSWethIonx.json
@@ -25,6 +25,11 @@
           },
           {
             "internalType": "address",
+            "name": "swapQuoter",
+            "type": "address"
+          },
+          {
+            "internalType": "address",
             "name": "swapRouter",
             "type": "address"
           },
@@ -345,6 +350,19 @@
         "internalType": "uint256",
         "name": "",
         "type": "uint256"
+      }
+    ],
+    "stateMutability": "view",
+    "type": "function"
+  },
+  {
+    "inputs": [],
+    "name": "_swapQuoter",
+    "outputs": [
+      {
+        "internalType": "address",
+        "name": "",
+        "type": "address"
       }
     ],
     "stateMutability": "view",
@@ -793,19 +811,6 @@
       }
     ],
     "stateMutability": "view",
-    "type": "function"
-  },
-  {
-    "inputs": [],
-    "name": "quoteSwap",
-    "outputs": [
-      {
-        "internalType": "uint256",
-        "name": "amountOut",
-        "type": "uint256"
-      }
-    ],
-    "stateMutability": "payable",
     "type": "function"
   },
   {
