Redeploy on Mode and Migrate old tokens

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gas": "REPORT_GAS=true hardhat test",
     "start": "hardhat node --port 8545",
     "deploy": "hardhat deploy --tags web3packs,deploySS,deployLP --network",
+    "migrate": "hardhat deploy --tags migrate --network",
     "erc721": "hardhat deploy --tags ERC721Mintable --network",
     "erc20": "hardhat deploy --tags ERC20Mintable --network"
   },
